src/test/deca/syntax/invalid/SansObjet/ElseVar.deca
//Description
//  else comme nom de variable
//
//Réponse
//  Erreur syntaxique ligne 9
//  no viable alternative at input 'else'

{
    int else = 0;
}